--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -1,7 +1,3 @@
-hsqldb:
-  server:
-    protocol: http
-    database: /test
-    dbname: txf
-    enabled: true
-    
+fdfs:
+  pool:
+    lifo: true
